@@ -1,14 +1,16 @@
 // $Id$
 project (DAnCE_LM_Config_Plugins) : dance_deployment_stub, dance_stub, dance_lib, dance_output {
-  dynamicflags += PROCESS_NAME_BUILD_DLL CPU_AFFINITY_BUILD_DLL
+  dynamicflags += PROCESS_NAME_BUILD_DLL CPU_AFFINITY_BUILD_DLL PROCESS_PRIORITY_BUILD_DLL
 
   Source_Files {
     Process_Name.cpp
+    Process_Priority.cpp
     CPU_Affinity.cpp
   }
 
   Header_Files {
     Process_Name.h
+    Process_Priority.h
     CPU_Affinity.h
   }
 }
